@@ -8,6 +8,7 @@ import java.util.List;
 
 import org.python.compiler.AdapterMaker;
 import org.python.compiler.JavaMaker;
+import org.python.core.util.StringUtil;
 
 class MakeProxies {
 
@@ -51,13 +52,24 @@ class MakeProxies {
             List<Class<?>> vinterfaces, String className, String proxyName,
             PyObject dict) {
         Class<?>[] interfaces = vinterfaces.toArray(new Class<?>[vinterfaces.size()]);
-        String fullProxyName = proxyPrefix + proxyName + "$" + proxyNumber++;
+        String fullProxyName;
+        PyObject customProxyName = dict.__finditem__("__javaname__");
+        if (customProxyName != null) {
+            fullProxyName = Py.tojava(customProxyName, String.class);
+            if (!StringUtil.isJavaClassName(fullProxyName)) {
+                throw Py.TypeError(fullProxyName + " isn't a valid Java class name.  Classes " +
+                    "must be valid Java identifiers: " +
+                    "http://java.sun.com/docs/books/jls/second_edition/html/lexical.doc.html#40625");
+            }
+        } else {
+            fullProxyName = proxyPrefix + proxyName + "$" + proxyNumber++;
+        }
         String pythonModuleName;
         PyObject mn = dict.__finditem__("__module__");
         if (mn == null) {
             pythonModuleName = "foo";
         } else {
-            pythonModuleName = (String) mn.__tojava__(String.class);
+            pythonModuleName = Py.tojava(mn, String.class);
         }
         JavaMaker jm = new JavaMaker(superclass,
                                      interfaces,
